force-app/main/default/objects/Disti_Relationship__c/Disti_Relationship__c.object-meta.xml
<CustomObject>
    <description>&quot;Look For Reseller Record In the Record Contracted Distributor Relationship Matrix&quot;</description>
    <label>Distributor  Relationship</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Distributor id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor  Relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>