force-app/main/default/objects/Disti_Relationship__c/fields/Contracted_Disti__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Disti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted Distributor(s)</label>
    <type>Checkbox</type>
</CustomField>