force-app/main/default/objects/Disti_Relationship__c/fields/Distributor_Account_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account_Name_text__c</fullName>
    <label>Distributor Account Name text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>