force-app/main/default/objects/Disti_Relationship__c/fields/Distributor_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Request_Reason__c</fullName>
    <label>Distributor Request Reason</label>
    <type>TextArea</type>
</CustomField>