force-app/main/default/objects/Disti_Relationship__c/fields/Distributor_Switch__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Switch__c</fullName>
    <description>Checks the flag based on time period stored in custom setting</description>
    <formula>AND(TODAY() &gt;= $Setup.Distributor_Switch_Time_Period__c.Start_Date__c &amp;&amp;( ISBLANK($Setup.Distributor_Switch_Time_Period__c.End_Date__c) || TODAY() &lt;= $Setup.Distributor_Switch_Time_Period__c.End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag to display change hyperlink in partner portal</inlineHelpText>
    <label>Distributor Switch On</label>
    <type>Checkbox</type>
</CustomField>