force-app/main/default/objects/Disti_Relationship__c/fields/Enabled_for_2_Contracted_Disti_s__c.field-meta.xml
<CustomField>
    <fullName>Enabled_for_2_Contracted_Disti_s__c</fullName>
    <formula>AND(Reseller_Account__c != null, 
OR(CONTAINS(LOWER($Label.DealReg_GcCountries), LOWER(Reseller_Account__r.Account_Country__c)), ($Label.DealReg_GcCountries == &apos;ALLCOUNTRIES&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Setting that displays two default Distributor Search Results for Partners</inlineHelpText>
    <label>Enabled for 2 Contracted Distributors</label>
    <type>Checkbox</type>
</CustomField>