force-app/main/default/objects/Disti_Relationship__c/fields/Existing_Secondary_Distributor_Informed__c.field-meta.xml
<CustomField>
    <fullName>Existing_Secondary_Distributor_Informed__c</fullName>
    <label>Existing Secondary Distributor Informed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>