force-app/main/default/objects/Disti_Relationship__c/fields/Onboarding_Distributors__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Distributors__c</fullName>
    <formula>TEXT(Reseller_Account__r.Partner_Registration__r.Sponsoring_Distributor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsoring Distributor</label>
    <type>Text</type>
</CustomField>