force-app/main/default/objects/Disti_Relationship__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <formula>Reseller_Account__r.Partner_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Path</label>
    <type>Text</type>
</CustomField>