force-app/main/default/objects/Disti_Relationship__c/fields/Requested_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor  Relationship (Requested Distributor)</relationshipLabel>
    <relationshipName>Distributor_Relationship1</relationshipName>
    <type>Lookup</type>
</CustomField>