force-app/main/default/objects/Disti_Relationship__c/fields/Requested_Distributor_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Distributor_Date__c</fullName>
    <label>Requested Distributor Date</label>
    <type>DateTime</type>
</CustomField>