force-app/main/default/objects/Disti_Relationship__c/fields/Requested_Secondary_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Secondary_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Secondary Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor  Relationship (Requested Secondary Distributor)</relationshipLabel>
    <relationshipName>Requested_Secondary_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>