force-app/main/default/objects/Disti_Relationship__c/fields/Requested_Secondary_Distributor_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_Secondary_Distributor_By__c</fullName>
    <label>Requested Secondary Distributor By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>