force-app/main/default/objects/Disti_Relationship__c/fields/Requested_Secondary_Distributor_Status__c.field-meta.xml
<CustomField>
    <fullName>Requested_Secondary_Distributor_Status__c</fullName>
    <label>Requested Secondary Distributor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>