force-app/main/default/objects/Disti_Relationship__c/fields/Reseller_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account_Name__c</fullName>
    <formula>Reseller_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Account Name</label>
    <type>Text</type>
</CustomField>