force-app/main/default/objects/Disti_Relationship__c/fields/Reseller_Affinity_Id__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Affinity_Id__c</fullName>
    <formula>Reseller_Account__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Affinity Id</label>
    <type>Text</type>
</CustomField>