force-app/main/default/objects/Disti_Relationship__c/fields/Secondary_Distributor_Account_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Distributor_Account_Name_text__c</fullName>
    <label>Secondary Distributor Account Name text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>