force-app/main/default/objects/Disti_Relationship__c/fields/Secondary_Distributor_Affinity_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Distributor_Affinity_Id__c</fullName>
    <formula>Secondary_Storage_Preferred_Distributor__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Distributor Affinity Id</label>
    <type>Text</type>
</CustomField>