force-app/main/default/objects/Disti_Relationship__c/fields/Secondary_Distributor_Country__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Distributor_Country__c</fullName>
    <formula>Secondary_Storage_Preferred_Distributor__r.Account_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Distributor Country</label>
    <type>Text</type>
</CustomField>