force-app/main/default/objects/Disti_Relationship__c/fields/Secondary_Distributor_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Distributor_Request_Reason__c</fullName>
    <label>Secondary Distributor Request Reason</label>
    <type>TextArea</type>
</CustomField>