force-app/main/default/objects/Disti_Relationship__c/fields/Secondary_Storage_Preferred_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Storage_Preferred_Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Secondary Storage Preferred Distributor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3) AND 4 AND 5</booleanFilter>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>federal distributor,commercial distributor,oem distributor,distributor (GCC),consumer distributor,sub distributor,federal oem distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>FEDERAL DISTRIBUTOR,OEM DISTRIBUTOR,COMMERCIAL DISTRIBUTOR,DISTRIBUTOR (GCC),CONSUMER DISTRIBUTOR,SUB DISTRIBUTOR,FEDERAL OEM DISTRIBUTOR</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>Federal Distributor,OEM Distributor,Commercial Distributor,Distributor (GCC),Consumer Distributor,Sub Distributor,Federal OEM Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner_Registration__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Account.Calculated_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Relationship (Secondary Storage Preferred Distributor)</relationshipLabel>
    <relationshipName>Secondary_Storage_Preferred_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>