force-app/main/default/objects/Disti_Relationship__c/fields/Storage_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Storage_Partner_Tier__c</fullName>
    <formula>text( Reseller_Account__r.Purchasing_Model__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialty Product Purchase Path</label>
    <type>Text</type>
</CustomField>