force-app/main/default/objects/Disti_Relationship__c/validationRules/Dist_Accoun_And_Reseller_Account_Not_Nul.validationRule-meta.xml
<ValidationRule>
    <fullName>Dist_Accoun_And_Reseller_Account_Not_Nul</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK (Disti_Account__c), ISBLANK (Reseller_Account__c))</errorConditionFormula>
    <errorMessage>Disti Account OR  Reseller Account Should Not Be Null.</errorMessage>
</ValidationRule>