force-app/main/default/objects/Disti_Relationship__c/validationRules/Secondary_Distributor_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Distributor_check</fullName>
    <active>true</active>
    <errorConditionFormula>(Disti_Account__c != null) &amp;&amp; (Disti_Account__c  =  Secondary_Storage_Preferred_Distributor__c)</errorConditionFormula>
    <errorDisplayField>Secondary_Storage_Preferred_Distributor__c</errorDisplayField>
    <errorMessage>Please select a different secondary distributor</errorMessage>
</ValidationRule>