force-app/main/default/objects/Disti_Relationship__c/validationRules/Secondary_Distributor_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Distributor_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>!Enabled_for_2_Contracted_Disti_s__c &amp;&amp; ( Secondary_Storage_Preferred_Distributor__c != null)</errorConditionFormula>
    <errorDisplayField>Secondary_Storage_Preferred_Distributor__c</errorDisplayField>
    <errorMessage>Reseller Country is not authorized to select Secondary Distributor</errorMessage>
</ValidationRule>