force-app/main/default/objects/Disti_Relationship__c/validationRules/Secondary_Requested_Distributor_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Requested_Distributor_check</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( $Profile.Name , &quot;PRM Portal&quot;) &amp;&amp;
Requested_Distributor__c != null &amp;&amp; Distributor_Request_Reason__c  == null &amp;&amp; ( Requested_Distributor__c == Requested_Secondary_Distributor__c )</errorConditionFormula>
    <errorDisplayField>Requested_Secondary_Distributor__c</errorDisplayField>
    <errorMessage>Please Request for a Different Secondary Distributor</errorMessage>
</ValidationRule>