force-app/main/default/objects/Disti_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contracted_Disti__c</columns>
    <columns>Reseller_Account_Name__c</columns>
    <columns>Onboarding_Distributors__c</columns>
    <columns>Disti_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>