force-app/main/default/objects/Disti_Relationship__c/listViews/All_Disti_Relationships.listView-meta.xml
<ListView>
    <fullName>All_Disti_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Reseller_Account__c</columns>
    <columns>Contracted_Disti__c</columns>
    <columns>Disti_Account__c</columns>
    <columns>Disti_Account_Name__c</columns>
    <columns>Disti_Affinity_Id__c</columns>
    <columns>Reseller_Account_Name__c</columns>
    <columns>Reseller_Affinity_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product_Category__c</columns>
    <columns>Disti_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Disti Relationships</label>
    <language>en_US</language>
</ListView>